# Home-Service-Robot

./: README.md
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp
add_markers_single/: CMakeLists.txt  package.xml
add_markers_single/src/: add_markers_single.cpp
map/: CMakeLists.txt  package.xml  world1.world
pick_objects/: CMakeLists.txt
pick_objects/src/: pick_objects.cpp
pick_objects_single/: CMakeLists.txt  package.xml
pick_objects_single/src/: pick_objects_single.cpp
scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
